fix overflow of chat

--- a/client/src/components/Chat/Chat.module.css
+++ b/client/src/components/Chat/Chat.module.css
@@ -1,4 +1,5 @@
 .newChat {
+  overflow-y: auto;
   flex: 3;
   display: flex;
   justify-content: center;
@@ -6,6 +7,7 @@
 }
 
 .chatContainer {
+  overflow-y: auto;
   flex: 3;
   display: flex;
   flex-direction: column;
