--- a/client/src/components/Message/Message.module.css
+++ b/client/src/components/Message/Message.module.css
@@ -1,3 +1,20 @@
-.message {
+.messageContainer {
+  display: flex;
   padding: 20px;
+  gap: 30px;
+  border-top: 1px solid #2b2c34;
+}
+
+.botMessageContainer {
+  background-color: #444654;
+}
+
+.message {
+}
+
+.avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 10%;
+  float: left;
 }
